--- a/fetch_wikimedia/Makefile
+++ b/fetch_wikimedia/Makefile
@@ -3,7 +3,7 @@ VENV = .venv_wikimedia
 run: $(VENV)/bin/activate
 	. $(VENV)/bin/activate && \
 	pip install -r requirements.txt && \
-	python fetch_paintings/main.py
+	python main.py
 
 $(VENV)/bin/activate:
 	@python3 -m venv $(VENV)
