--- a/fetch_wikimedia/Makefile
+++ b/fetch_wikimedia/Makefile
@@ -1,6 +1,8 @@
-VENV = .venv_wikimedia
+VENV := .venv-wikimedia
 
-run: $(VENV)/bin/activate
+run: 
+	@echo "🔧 Installo librerie di sistema se mancano..."
+	sudo apt-get update -qq && sudo apt-get install -y -qq libgl1 libglib2.0-0 libsm6 libxrender1 libxext6 > /dev/null
 	. $(VENV)/bin/activate && \
 	pip install -r requirements.txt && \
 	python main.py
@@ -12,3 +14,4 @@ $(VENV)/bin/activate:
 clean:
 	rm -rf $(VENV)
 	find . -type d -name '__pycache__' -exec rm -r {} +
+
