--- a/fetch_wikimedia/Makefile
+++ b/fetch_wikimedia/Makefile
@@ -1,11 +1,12 @@
 VENV := .venv-wikimedia
+PY := $(VENV)/bin/python
+PIP := $(VENV)/bin/pip
 
-run: 
+run: $(VENV)/bin/activate
 	@echo "🔧 Installo librerie di sistema se mancano..."
 	sudo apt-get update -qq && sudo apt-get install -y -qq libgl1 libglib2.0-0 libsm6 libxrender1 libxext6 > /dev/null
-	. $(VENV)/bin/activate && \
-	pip install -r requirements.txt && \
-	python main.py
+	$(PIP) install -r requirements.txt
+	$(PY) main.py
 
 $(VENV)/bin/activate:
 	@python3 -m venv $(VENV)
@@ -14,4 +15,3 @@ $(VENV)/bin/activate:
 clean:
 	rm -rf $(VENV)
 	find . -type d -name '__pycache__' -exec rm -r {} +
-
